# snd-mirror

./: CM_patterns.scm  COPYING  HISTORY.Snd  NEWS  README.Snd  Snd.ad  Snd.gtkrc  TODO.Snd  _sndlib.h  aclocal.m4  analog-filter.rb  analog-filter.scm  animals.scm  audinfo.c  audio.c  autosave.scm  backgrounds.scm  bell.scm  bess.rb  bess.scm  bess1.rb  bess1.scm  big-gens.scm  binary-io.scm  bird.fsm  bird.rb  bird.scm  clean.scm  clm-ins.fs  clm-ins.rb  clm-ins.scm  clm-strings.h  clm.c  clm.fs  clm.h  clm.html  clm.rb  clm23.scm  clm2scm.c  clm2scm.h  (+460 more)
contrib/: bess.rb  edit123.scm  effects.rb  examp.rb  inf-snd.el  popup.rb  v.rb
contrib/dlp/: README  dp-new-effects.scm  fft-menu.scm  marks-menu.scm  misc.scm  mix-menu.scm  new-buttons.scm  new-effects.scm  new-icons.scm  new_backgrounds.scm  new_buttons.scm  panic.scm  plugins-menu.scm  plugins.scm  special-menu.scm
contrib/dlp/plugins/: plugin-audio-divider.scm  plugin-canyon-delay.scm  plugin-chorus.scm  plugin-decimator.scm  plugin-delay5s.scm  plugin-fbdelay5s.scm  plugin-freeverb3.scm  plugin-granular-scatter.scm  plugin-gsm-simulator.scm  plugin-gverb.scm  plugin-lfo-phaser.scm  plugin-pitch-scale-hq.scm  plugin-ringmod.scm  plugin-sifter.scm  plugin-transient.scm  plugin-valve.scm  plugin-vcf303.scm  plugin-waveshaper.scm
contrib/tutorial/: 1_intro_and_build_snd.html  2_custom_snd.html  4_advanced_snd.html  README
contrib/tutorial/files/: misc.scm.txt
dlp/: dp-new-effects.scm  fft-menu.scm  marks-menu.scm  misc.scm  mix-menu.scm  new-backgrounds.scm  new-buttons.scm  new-icons.scm  panic.scm  special-menu.scm  track-colors.scm
gfm/: Makefile  README  bird.gfm  clm-ins.fs  cm-examp.gfm  csndlib.fs  dlocsig.fs  fmviolin.gfm  fsndlib.fs  gfm-defs.fs  gfm-gens.fs  gfm.fs  notelist.fs  pachelbel.gfm  ricercari12.gfm  sndtest.gfm  spectr.fs  utils.fs
po/: ChangeLog  Makefile.in.in  Makevars  POTFILES.in  de.po  snd.pot
sndins/: Makefile.in  README  sndins.c  sndins.h
sndins/samples/: agn.fth  agn.rb  agn.scm  fmviolin.fth  fmviolin.rb  fmviolin.scm  ws_s.scm
tools/: .gdbinit  README  check-gtk.scm  check-help.scm  check-sigs.scm  clisp-number-tests.scm  clisp-other-tests.scm  compare-calls.scm  compsnd  crossref.c  dup.scm  ecl.txt  exs7.c  ffitest.c  gauche.txt  gcall.c  gcat  gdb-s7.scm  gdbinit  gldata.scm  grepl.c  gtest.scm  gtk-header-diffs  index.cl  indexer.scm  librep.txt  lines.scm  make-config-pc.rb  make-index.scm  makegl.scm  makexg.scm  nor.scm  numtst.c  profile.h  repl.input  sam.c  sarchive  sed-href  shipit  snd-index.cl  (+17 more)
tutorial/: 1_intro_and_build_snd.html  3_editing_and_processing_snd.html  5_close_snd.html  6_resources.html
tutorial/files/: .snd
